<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:orientation="horizontal">

        <TextView
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitEnd"
            android:src="@tools:sample/avatars"
            app:srcCompat="@drawable/baseline_more_vert_24" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="#128575">

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/t1"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/t12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/t12"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t2"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/t22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/t22"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t3"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
        <TextView
            android:id="@+id/t32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/t32"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t4"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
        <TextView
            android:id="@+id/t42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/t42"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t5"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/t52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/t52"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>

    <TextView
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="136dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/ts1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s1"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/ts12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/s12"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/ts2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s2"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/ts22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/s22"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/ts3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s3"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/ts32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/s32"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/ts4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s4"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/ts42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/s42"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="136dp" />
    </TableRow>

</TableLayout>